# drone-apriltag-tracking

./: CMakeLists.txt  README.md  package.xml
config/: tags.yaml
gazebo_sim_files/: gazebo_camera_cal.yaml  tags.yaml  yaml_to_cam_info_pub_v3_opencvyaml.py
launch/: apriltag_tracking.launch  gazebo_detection.launch  image_proc_gazebo.launch  sitl_gazebo_custom.launch
models/fpv_cam/: fpv_cam.sdf
models/iris_fpv_cam/: iris_fpv_cam.sdf
scripts/: pub_camera_info.py
src/: apriltag_tracking.cpp  sample.cpp
worlds/: empty_apriltag.world
