<?xml version="1.0"?>
<package format="2">
  <name>apriltag_tracking</name>
  <version>0.0.0</version>
  <description>Drone tracking a moving apriltag</description>

  <maintainer email="aashry55@gmail.com">Ahmed Ashry</maintainer>

 <license>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>apriltag_ros</build_depend>


  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>mavros</exec_depend>


</package>